# mailcore2

./: CMakeLists.txt
src/: CMakeLists.txt
src/async/imap/: MCIMAPAsyncSession.h  MCIMAPOperation.cpp  MCIMAPOperation.h
src/cmake/: core.cmake  findpath.cmake  public-headers.cmake
src/core/basetypes/: MCDataDecoderUtils.cpp  MCString.cpp  MCString.h  MCUtils.h
src/core/imap/: MCIMAPSession.h
src/core/security/: MCCertificateUtils.cpp
src/core/smtp/: MCSMTPSession.cpp
src/core/windows/sys/: mman.c  mman.h
src/core/zip/: MCZip.cpp
tests/: test-all.cpp
